Add batch processing to product inventory list to increase query performance